// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIGuide renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 eTYfMd CLIGuide__StyledAccordion-sc-1q6mc5x-0 hHKhja"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bbYfqa"
      >
        <button
          aria-expanded="true"
          class="StyledButtonKind-sc-1vhfpnt-0 dJYuIC"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eVZuZv"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hkKLAk"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 GogVv fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bilQLe"
              />
              <span
                class="StyledText-sc-1sadyjn-0 imZUDx"
              >
                Get something from somewhere via the Management API
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 lgHHiJ"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 glkCQr"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 kAKeln"
          role="region"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 kAKeln Collapsible__AnimatedBox-sc-15kniua-0 emVsh"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fbjLnS"
            >
              Just some content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuide renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 eTYfMd CLIGuide__StyledAccordion-sc-1q6mc5x-0 hHKhja"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bbYfqa"
      >
        <button
          aria-expanded="false"
          class="StyledButtonKind-sc-1vhfpnt-0 dJYuIC"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eVZuZv"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hkKLAk"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 GogVv fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bilQLe"
              />
              <span
                class="StyledText-sc-1sadyjn-0 imZUDx"
              >
                Get something from somewhere via the Management API
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 lgHHiJ"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 glkCQr"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 kAKeln"
          role="region"
        >
          <div
            aria-hidden="true"
            class="StyledBox-sc-13pk1d4-0 kAKeln Collapsible__AnimatedBox-sc-15kniua-0 kQDhcg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders the children as-is if there is only one 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kAKeln"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eTYfMd CLIGuide__StyledAccordion-sc-1q6mc5x-0 hHKhja"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 bbYfqa"
        >
          <button
            aria-expanded="false"
            class="StyledButtonKind-sc-1vhfpnt-0 dJYuIC"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 eVZuZv"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 hkKLAk"
              >
                <span
                  aria-hidden="true"
                  class="StyledText-sc-1sadyjn-0 GogVv fa fa-shell"
                  role="presentation"
                />
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bilQLe"
                />
                <span
                  class="StyledText-sc-1sadyjn-0 imZUDx"
                >
                  Get something from somewhere via the Management API
                </span>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 lgHHiJ"
              >
                <svg
                  aria-label="FormDown"
                  class="StyledIcon-sc-ofa7kd-0 glkCQr"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m18 9-6 6-6-6"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 kAKeln"
            role="region"
          >
            <div
              aria-hidden="true"
              class="StyledBox-sc-13pk1d4-0 kAKeln Collapsible__AnimatedBox-sc-15kniua-0 kQDhcg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dOFRmW"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bbYfqa"
      >
        <button
          aria-expanded="true"
          class="StyledButtonKind-sc-1vhfpnt-0 dJYuIC"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eVZuZv"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cijnPq"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 jMNiKo fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bilQLe"
              />
              <span
                class="StyledText-sc-1sadyjn-0 giwUUS"
              >
                Use the API to …
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 lgHHiJ"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 glkCQr"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 kAKeln"
          role="region"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 kAKeln Collapsible__AnimatedBox-sc-15kniua-0 emVsh"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hlUdPC"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 eTYfMd CLIGuide__StyledAccordion-sc-1q6mc5x-0 hHKhja"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bbYfqa"
                >
                  <button
                    aria-expanded="false"
                    class="StyledButtonKind-sc-1vhfpnt-0 dJYuIC"
                    type="button"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 eVZuZv"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 hkKLAk"
                      >
                        <span
                          aria-hidden="true"
                          class="StyledText-sc-1sadyjn-0 GogVv fa fa-shell"
                          role="presentation"
                        />
                        <div
                          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bilQLe"
                        />
                        <span
                          class="StyledText-sc-1sadyjn-0 imZUDx"
                        >
                          Get something from somewhere
                        </span>
                      </div>
                      <div
                        class="StyledBox-sc-13pk1d4-0 lgHHiJ"
                      >
                        <svg
                          aria-label="FormDown"
                          class="StyledIcon-sc-ofa7kd-0 glkCQr"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 9-6 6-6-6"
                            fill="none"
                            stroke="#000"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kAKeln"
                    role="region"
                  >
                    <div
                      aria-hidden="true"
                      class="StyledBox-sc-13pk1d4-0 kAKeln Collapsible__AnimatedBox-sc-15kniua-0 kQDhcg"
                    />
                  </div>
                </div>
              </div>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kHItxE"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 eTYfMd CLIGuide__StyledAccordion-sc-1q6mc5x-0 hHKhja"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bbYfqa"
                >
                  <button
                    aria-expanded="false"
                    class="StyledButtonKind-sc-1vhfpnt-0 dJYuIC"
                    type="button"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 eVZuZv"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 hkKLAk"
                      >
                        <span
                          aria-hidden="true"
                          class="StyledText-sc-1sadyjn-0 GogVv fa fa-shell"
                          role="presentation"
                        />
                        <div
                          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bilQLe"
                        />
                        <span
                          class="StyledText-sc-1sadyjn-0 imZUDx"
                        >
                          Get something else from somewhere else
                        </span>
                      </div>
                      <div
                        class="StyledBox-sc-13pk1d4-0 lgHHiJ"
                      >
                        <svg
                          aria-label="FormDown"
                          class="StyledIcon-sc-ofa7kd-0 glkCQr"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 9-6 6-6-6"
                            fill="none"
                            stroke="#000"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kAKeln"
                    role="region"
                  >
                    <div
                      aria-hidden="true"
                      class="StyledBox-sc-13pk1d4-0 kAKeln Collapsible__AnimatedBox-sc-15kniua-0 kQDhcg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kAKeln"
    />
  </div>
</div>
`;
